blog side added

--- a/css/style.css
+++ b/css/style.css
@@ -1171,60 +1171,84 @@ body {
   padding: 80px;
 }
 
-.blog .container .row .card-group .card {
+.blog .container .row .col-lg-6 .card {
   margin-bottom: 30px;
   padding: 0 15px;
-  box-shadow: rgba(255, 255, 255, 0.95);
+  box-shadow: 0 0 15px 0 rgba(68, 68, 68, 0.23);
+  border: none;
+  border-radius: 0 !important;
 }
 
-.blog .container .row .card-group .card .row .col-lg-5 {
+.blog .container .row .col-lg-6 .card .row .col-lg-5 {
   margin: 0;
   padding: 0;
 }
 
-.blog .container .row .card-group .card .row .col-lg-5 .card-img-top {
-  height: 100%;
-  max-height: 800;
+.blog .container .row .col-lg-6 .card .row .col-lg-5 .card-img-top {
+  height: auto;
+  max-height: 100%;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 {
+.blog .container .row .col-lg-6 .card .row .col-lg-5 .post-date {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background-color: #00d6a3;
+  color: #fff;
+  height: 62px;
+  width: 69px;
+}
+
+.blog .container .row .col-lg-6 .card .row .col-lg-5 .post-date span {
+  font-size: 12px;
+}
+
+.blog .container .row .col-lg-6 .card .row .col-lg-7 {
   margin: 0;
   padding: 0;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body {
   padding: 20px 25px 20px 25px !important;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body .card-title {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body .card-title {
   margin-top: 0;
   margin-bottom: 4px;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body .card-title a {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body .card-title a {
   color: #033b4a;
   font-size: 22px;
   font-weight: 500;
   line-height: 29px;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body .card-title a:hover {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body .card-title a:hover {
   color: #00d6a3;
   text-decoration: none;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body span {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body span {
   font-size: 12px;
   margin: 0 10px 5px 0;
-  color: #9dabaf;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body span i {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body span i {
   color: #00d6a3;
   padding-right: 4px;
 }
 
-.blog .container .row .card-group .card .row .col-lg-7 .card-body p {
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body span a {
+  color: #9dabaf;
+  text-decoration: none;
+}
+
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body span a:hover {
+  color: #00d6a3;
+}
+
+.blog .container .row .col-lg-6 .card .row .col-lg-7 .card-body p {
   font-size: 15px;
   font-weight: 400;
   color: #9dabaf;
