--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1109,18 +1109,33 @@ body {
     padding: 80px;
     .container {
         .row {
-            .card-group {
+            .col-lg-6 {
                 .card {
                     margin-bottom: 30px;
                     padding: 0 15px;
-                    box-shadow: rgba(255, 255, 255, 0.95);
+                    box-shadow: 0 0 15px 0 rgba(68, 68, 68, 0.23);
+                    border: none;
+                    border-radius: 0 !important;
                     .row {
                         .col-lg-5 {
                             margin: 0;
                             padding: 0;
                             .card-img-top {
-                                height: 100%;
-                                max-height: 800;
+                                height: auto;
+                                max-height: 100%;
+                            }
+                            .post-date {
+                                position: absolute;
+                                bottom: 10px;
+                                left: 10px;
+                                background-color: $primary-color;
+
+                                color: $font-color-white;
+                                height: 62px;
+                                width: 69px;
+                                span {
+                                    font-size: 12px;
+                                }
                             }
                         }
                         .col-lg-7 {
@@ -1144,10 +1159,16 @@ body {
                                 span {
                                     font-size: 12px;
                                     margin: 0 10px 5px 0;
-                                    color: $font-color-1;
                                     i {
                                         color: $primary-color;
                                         padding-right: 4px;
+                                    }
+                                    a {
+                                        color: $font-color-1;
+                                        text-decoration: none;
+                                        &:hover {
+                                            color: $primary-color;
+                                        }
                                     }
                                 }
                                 p {
