footer widget add

--- a/css/style.css
+++ b/css/style.css
@@ -1285,3 +1285,151 @@ body {
 .contact-details .container .row .col-lg-4 .d-table .table-cell small {
   font-size: 14px;
 }
+
+.footer {
+  padding: 80px;
+  position: relative;
+  background-image: url(../img/footer-bg-map.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.footer .container .row .col-lg-3 h3 {
+  font-size: 23px;
+  margin-bottom: 28px;
+}
+
+.footer .container .row .col-lg-3 p {
+  color: #9dabaf;
+  font-size: 15px;
+  line-height: 25px;
+  margin-bottom: 20px;
+}
+
+.footer .container .row .col-lg-3 .footer-social-link a {
+  padding: 0 6px;
+}
+
+.footer .container .row .col-lg-3 .footer-social-link a i {
+  border-radius: 50%;
+  border: 1px solid #00d6a3;
+  width: 33px;
+  height: 33px;
+  font-size: 14px;
+  line-height: 32px;
+  text-align: center;
+  color: #00d6a3;
+  transition: all 0.2s ease-in;
+}
+
+.footer .container .row .col-lg-3 .footer-social-link a i:hover {
+  background-color: #00d6a3;
+  color: #fff;
+}
+
+.footer .container .row .col-lg-3 .quick-links {
+  list-style: none;
+}
+
+.footer .container .row .col-lg-3 .quick-links li {
+  margin-bottom: 12px;
+}
+
+.footer .container .row .col-lg-3 .quick-links li a {
+  padding-left: 18px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 500;
+  position: relative;
+  transition: all 0.1s ease-in;
+}
+
+.footer .container .row .col-lg-3 .quick-links li a::before {
+  line-height: 16px;
+  font-size: 14px;
+  content: "";
+  background-color: #00d6a3;
+  width: 11px;
+  height: 1px;
+  color: #00d6a3;
+  position: absolute;
+  top: 12px;
+  left: 0;
+}
+
+.footer .container .row .col-lg-3 .quick-links li a:hover {
+  color: #00d6a3;
+}
+
+.footer .container .row .col-lg-3 .latest-news {
+  list-style: none;
+}
+
+.footer .container .row .col-lg-3 .latest-news li {
+  padding: 5px 0 16px 0;
+}
+
+.footer .container .row .col-lg-3 .latest-news li img {
+  display: block;
+  width: 70px;
+  height: 70px;
+  float: left;
+  margin-right: 16px;
+}
+
+.footer .container .row .col-lg-3 .latest-news li span {
+  display: block;
+  font-size: 12px;
+  color: #9dabaf;
+}
+
+.footer .container .row .col-lg-3 .latest-news li a {
+  color: #fff;
+  font-size: 15px;
+  line-height: 22px;
+  display: block;
+  text-decoration: none;
+  transition: all 0.1s ease-in;
+}
+
+.footer .container .row .col-lg-3 .latest-news li a:hover {
+  color: #00d6a3;
+}
+
+.footer .container .row .col-lg-3 .our-services-footer ul {
+  list-style: none;
+}
+
+.footer .container .row .col-lg-3 .our-services-footer ul li {
+  margin-bottom: 12px;
+}
+
+.footer .container .row .col-lg-3 .our-services-footer ul li a {
+  padding-left: 16px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 500;
+  position: relative;
+  transition: all 0.1s ease-in;
+}
+
+.footer .container .row .col-lg-3 .our-services-footer ul li a::before {
+  line-height: 16px;
+  font-size: 14px;
+  content: "";
+  background-color: #00d6a3;
+  width: 11px;
+  height: 1px;
+  color: #00d6a3;
+  position: absolute;
+  top: 12px;
+  left: 0;
+}
+
+.footer .container .row .col-lg-3 .our-services-footer ul li a:hover {
+  color: #00d6a3;
+}
