--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1219,3 +1219,140 @@ body {
         }
     }
 }
+//main footer
+.footer {
+    padding: 80px;
+    position: relative;
+    background: {
+        image: url(../img/footer-bg-map.jpg);
+        repeat: no-repeat;
+        size: cover;
+    }
+    color: $font-color-white;
+    font-family: "Ubuntu", sans-serif;
+    .container {
+        .row {
+            .col-lg-3 {
+                h3 {
+                    font-size: 23px;
+                    margin-bottom: 28px;
+                }
+                p {
+                    color: $font-color-1;
+                    font-size: 15px;
+                    line-height: 25px;
+                    margin-bottom: 20px;
+                }
+                .footer-social-link {
+                    a {
+                        padding: 0 6px;
+                        i {
+                            border-radius: 50%;
+                            @include border(1px, $primary-color);
+                            width: 33px;
+                            height: 33px;
+                            font-size: 14px;
+                            line-height: 32px;
+                            text-align: center;
+                            color: $primary-color;
+                            @include transition(0.2s);
+                            &:hover {
+                                background-color: $primary-color;
+                                color: $font-color-white;
+                            }
+                        }
+                    }
+                }
+                .quick-links {
+                    list-style: none;
+                    li {
+                        margin-bottom: 12px;
+                        a {
+                            padding-left: 18px;
+                            color: $font-color-white;
+                            text-decoration: none;
+                            @include font(15, 500);
+                            position: relative;
+                            @include transition(0.1s);
+                            &::before {
+                                line-height: 16px;
+                                font-size: 14px;
+                                content: "";
+                                background-color: $primary-color;
+                                width: 11px;
+                                height: 1px;
+                                color: $primary-color;
+                                position: absolute;
+                                top: 12px;
+                                left: 0;
+                            }
+                            &:hover {
+                                color: $primary-color;
+                            }
+                        }
+                    }
+                }
+                .latest-news {
+                    list-style: none;
+                    li {
+                        padding: 5px 0 16px 0;
+                        img {
+                            display: block;
+                            width: 70px;
+                            height: 70px;
+                            float: left;
+                            margin-right: 16px;
+                        }
+                        span {
+                            display: block;
+                            font-size: 12px;
+                            color: $font-color-1;
+                        }
+                        a {
+                            color: $font-color-white;
+                            font-size: 15px;
+                            line-height: 22px;
+                            display: block;
+                            text-decoration: none;
+                            @include transition(0.1s);
+                            &:hover {
+                                color: $primary-color;
+                            }
+                        }
+                    }
+                }
+                .our-services-footer {
+                    ul {
+                        list-style: none;
+                        li {
+                            margin-bottom: 12px;
+                            a {
+                                padding-left: 16px;
+                                color: $font-color-white;
+                                text-decoration: none;
+                                @include font(15, 500);
+                                position: relative;
+                                @include transition(0.1s);
+                                &::before {
+                                    line-height: 16px;
+                                    font-size: 14px;
+                                    content: "";
+                                    background-color: $primary-color;
+                                    width: 11px;
+                                    height: 1px;
+                                    color: $primary-color;
+                                    position: absolute;
+                                    top: 12px;
+                                    left: 0;
+                                }
+                                &:hover {
+                                    color: $primary-color;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
