--- a/css/style.css
+++ b/css/style.css
@@ -237,9 +237,9 @@ body {
 }
 
 .main-menu .navbar .navbar-nav .nav-item {
-  padding: 0px 16px;
+  padding: 0px 14px;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .main-menu .navbar .navbar-nav .nav-item a {
@@ -280,28 +280,8 @@ body {
   transition: all 0.4s ease-in;
 }
 
-.main-menu .navbar .search i,
-.main-menu .navbar .shopping-cart i {
+.main-menu .navbar .search i {
   color: #033b4a;
-}
-
-.main-menu .navbar .shopping-cart {
-  padding-right: 0px;
-  border-left: 1px solid rgba(6, 48, 59, 0.1);
-}
-
-.main-menu .navbar .shopping-cart .number-cart {
-  position: relative;
-  bottom: 14px;
-  left: -4px;
-  width: 20px;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 400;
-  color: #fff;
-  background: #00d6a3;
-  border-radius: 50%;
-  padding: 2px 4px 2px 4px;
 }
 
 .top-button {
