--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,9 @@
     margin: 0;
     font-family: $font-family;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 body {
     padding: 0;
     margin: 0;
@@ -270,6 +272,8 @@ body {
     display: inline-block;
     text-align: center;
     cursor: pointer;
+    display: none;
+    transition: all 0.2s ease-in-out;
 }
 //widget
 .widget {
@@ -1335,7 +1339,56 @@ body {
                         }
                     }
                 }
+                .subscribe-form {
+                    margin-top: 20px;
+                    h3 {
+                        margin-bottom: 20px;
+                    }
+                    form {
+                        position: relative;
+                        input[type="email"] {
+                            background-color: rgba(255, 255, 255, 0.09);
+                            padding: 10px 15px;
+                            width: 100%;
+                            height: 45px;
+                            border: none;
+                            outline: 0;
+                            color: rgba(255, 255, 255, 1);
+                            font-size: 13px;
+                        }
+                        .btn {
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            padding: 10px 15px;
+                            background-color: $primary-color;
+                            color: #fff;
+                            border-radius: 0;
+                            font-size: 16px;
+                            height: 45px;
+                            width: 50px;
+                        }
+                    }
+                }
             }
+        }
+    }
+}
+.copyright-footer {
+    font-family: "Saira", sans-serif;
+    padding: 20px;
+    background-color: #013340;
+    text-align: center;
+    span {
+        color: $font-color-1;
+        font-size: 15px;
+    }
+    div {
+        color: $font-color-white;
+        a {
+            color: $font-color-white;
+            text-decoration: none;
+            padding: 0 6px;
         }
     }
 }
